#2804 Rationalise TransformationContextFromStage1To2